# pico_tutorial_projects

./: README.md
elektr_wuerfel/: CMakeLists.txt  main.cpp
elektr_wuerfel/schematic/: elektronischer_wuerfel.kicad_sch
hello_world/: CMakeLists.txt  main.cpp
template_project/: CMakeLists.txt  main.cpp
tutorial_001/: CMakeLists.txt  main.cpp
tutorial_002/: CMakeLists.txt  main.cpp
tutorial_003/: CMakeLists.txt  main.cpp
tutorial_adc_01/: CMakeLists.txt  main.cpp
tutorial_adc_02/: CMakeLists.txt  main.cpp
tutorial_adc_03/: CMakeLists.txt  main.cpp
tutorial_adc_03/schematic/: lauflicht_anschluss.kicad_prl  lauflicht_anschluss.kicad_pro  lauflicht_anschluss.kicad_sch
